:bug: fix double border bug

--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -35,13 +35,15 @@ body {
   text-align: left;
 }
 
-.reveal .slides section,
-.reveal .slides section section {
-  box-shadow: 0 0 5px 1px #cccccc;
+.reveal .slides section {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
   padding: 0 var(--main-content-horizontal-padding);
+}
+
+.reveal .slides > section {
+  box-shadow: 0 0 5px 1px #cccccc;
 }
 
 .reveal .slides section section {
